# voiceInput

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
scripts/: enroll_speaker.py  quick_test.py  run_demo.py  web_server.py
src/voice_input/: __init__.py  config.py  pipeline.py
src/voice_input/asr/: __init__.py  whisper.py
src/voice_input/audio/: __init__.py  capture.py  processor.py  vad.py
src/voice_input/cleaner/: text_cleaner.py
src/voice_input/intent/: __init__.py  classifier.py
src/voice_input/llm/: __init__.py  processor.py
src/voice_input/speaker/: __init__.py  diarize.py  enroll.py  identify.py
tests/: test_pipeline.py
web/: index.html
